# aioduct

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  pages.yml
benches/: comparison.rs
crates/aioduct/: Cargo.toml
crates/aioduct-aria/: Cargo.toml
crates/aioduct-aria/src/: cli.rs  engine.rs  filename.rs  main.rs  progress.rs  request_config.rs  segment.rs
crates/aioduct-bench/: Cargo.toml
crates/aioduct-bench/benches/: features.rs  h1.rs  h2.rs  json.rs  pooling.rs
crates/aioduct-bench/src/: lib.rs
crates/aioduct-curl/: Cargo.toml
crates/aioduct-curl/src/: cli.rs  client.rs  main.rs  output.rs  request.rs
crates/aioduct/src/: alt_svc.rs  bandwidth.rs  blocking.rs  body.rs  cache.rs  chunk_download.rs  client.rs  connector.rs  cookie.rs  decompress.rs  digest_auth.rs  error.rs  forwarded.rs  happy_eyeballs.rs  hickory.rs  hsts.rs  http2.rs  lib.rs  link.rs  middleware.rs  multipart.rs  netrc.rs  otel_middleware.rs  problem.rs  proxy.rs  request.rs  response.rs  retry.rs  socks5.rs  sse.rs  throttle.rs  timeout.rs  timing.rs  tracing_middleware.rs  wasm.rs
crates/aioduct/src/client/: builder.rs  connect.rs  mod.rs
crates/aioduct/src/h3/: mod.rs
crates/aioduct/src/pool/: connection.rs  mod.rs
crates/aioduct/src/runtime/: compio_rt.rs  mod.rs  smol_rt.rs  tokio_rt.rs
crates/aioduct/src/tls/: mod.rs  rustls_connector.rs
crates/aioduct/tests/: blocking_integration.rs  integration.rs
doc/: book.toml
doc/src/: SUMMARY.md  api_reference.md  architecture.md  bandwidth.md  benchmarks.md  caching.md  chunk_download.md  cli_tools.md  connection_pool.md  cookies.md  decompression.md  digest_auth.md  feature_flags.md  forwarded.md  getting_started.md  hsts.md  http2_tuning.md  http3.md  introduction.md  link_headers.md  middleware.md  multipart.md  netrc.md  problem_details.md  proxy.md  redirect.md  retry.md  runtime.md  sse.md  streaming.md  streaming_upload.md  tls.md  upgrade.md
examples/basic-get/: Cargo.toml
examples/basic-get/src/: main.rs
examples/blocking-client/: Cargo.toml
examples/blocking-client/src/: main.rs
examples/chunk-download/: Cargo.toml
examples/chunk-download/src/: main.rs
examples/cookies/: Cargo.toml
examples/cookies/src/: main.rs
examples/custom-cache-store/: Cargo.toml
examples/custom-cache-store/src/: main.rs
examples/custom-headers/: Cargo.toml
examples/custom-headers/src/: main.rs
examples/decompression/: Cargo.toml
examples/decompression/src/: main.rs
examples/error-handling/: Cargo.toml
examples/error-handling/src/: main.rs
examples/http-cache/: Cargo.toml
examples/http-cache/src/: main.rs
examples/http2-prior/: Cargo.toml
examples/http2-prior/src/: main.rs
examples/https-rustls/: Cargo.toml
examples/https-rustls/src/: main.rs
examples/json-roundtrip/: Cargo.toml
examples/json-roundtrip/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs
examples/multipart-upload/: Cargo.toml
examples/multipart-upload/src/: main.rs
examples/otel-spans/: Cargo.toml
examples/otel-spans/src/: main.rs
examples/post-form/: Cargo.toml
examples/post-form/src/: main.rs
examples/proxy-socks/: Cargo.toml
examples/proxy-socks/src/: main.rs
examples/query-params/: Cargo.toml
examples/query-params/src/: main.rs
examples/rate-limiter/: Cargo.toml
examples/rate-limiter/src/: main.rs
examples/redirects/: Cargo.toml
examples/redirects/src/: main.rs
examples/smol-runtime/: Cargo.toml
examples/smol-runtime/src/: main.rs
examples/sse-stream/: Cargo.toml
examples/sse-stream/src/: main.rs
examples/streaming-body/: Cargo.toml
examples/streaming-body/src/: main.rs
examples/timeout-and-retry/: Cargo.toml
examples/timeout-and-retry/src/: main.rs
examples/tower-connector/: Cargo.toml
examples/tower-connector/src/: main.rs
examples/tracing-logs/: Cargo.toml
examples/tracing-logs/src/: main.rs
examples/upgrade-websocket/: Cargo.toml
examples/upgrade-websocket/src/: main.rs
src/: alt_svc.rs  blocking.rs  body.rs  cache.rs  chunk_download.rs  client.rs  connector.rs  cookie.rs  decompress.rs  error.rs  http2.rs  lib.rs  middleware.rs  multipart.rs  otel_middleware.rs  proxy.rs  redirect.rs  request.rs  response.rs  retry.rs  socks4.rs  socks5.rs  sse.rs  throttle.rs  timeout.rs  tracing_middleware.rs  upgrade.rs  wasm.rs
src/h3/: mod.rs
src/pool/: connection.rs  mod.rs
src/runtime/: compio_rt.rs  mod.rs  smol_rt.rs  tokio_rt.rs
src/tls/: mod.rs  rustls_connector.rs
tests/: compio_integration.rs  integration.rs  smol_integration.rs
