[package]
name = "aioduct"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Async-native HTTP client built directly on hyper 1.x — no hyper-util, no legacy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamcavendish/aioduct"
readme = "README.md"
keywords = ["http", "client", "async", "hyper", "rustls"]
categories = ["network-programming", "web-programming::http-client"]
exclude = ["doc/", "benches/", "tests/", "target/"]

[features]
default = []
json = ["dep:serde", "dep:serde_json", "dep:serde_urlencoded"]
charset = ["dep:encoding_rs", "dep:mime"]
rustls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
rustls-native-roots = ["rustls", "dep:rustls-native-certs"]
hickory-dns = ["dep:hickory-resolver", "tokio"]
blocking = ["tokio"]
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:async-io", "dep:futures-io"]
compio = ["dep:compio-runtime", "dep:compio-driver", "dep:async-io", "dep:futures-io"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:futures-util", "rustls"]
gzip = ["dep:flate2"]
brotli = ["dep:brotli"]
zstd = ["dep:zstd"]
deflate = ["dep:flate2"]
tower = ["dep:tower-service", "dep:tower-layer"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]

[dependencies]
# Core — always required
hyper = { version = "1", features = ["client", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
pin-project-lite = "0.2"
thiserror = "2"
base64 = "0.22"
percent-encoding = "2"
socket2 = { version = "0.5", features = ["all"] }
futures-core = "0.3"

# JSON
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

# Charset decoding
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3", optional = true }

# TLS
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
webpki-roots = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-native-certs = { version = "0.8", optional = true }

# DNS
hickory-resolver = { version = "0.26", optional = true }

# Runtime: tokio
tokio = { version = "1", optional = true, features = ["net", "rt", "time"] }

# Runtime: smol
smol = { version = "2", optional = true }
async-io = { version = "2", optional = true }
futures-io = { version = "0.3", optional = true }

# Runtime: compio
compio-runtime = { version = "0.5", optional = true, features = ["time"] }
compio-driver = { version = "0.5", optional = true, default-features = false, features = ["polling"] }

# HTTP/3
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11", optional = true, default-features = false, features = ["rustls-ring"] }
futures-util = { version = "0.3", optional = true }

# Decompression
flate2 = { version = "1", optional = true }
brotli = { version = "8", optional = true, default-features = false, features = ["std"] }
zstd = { version = "0.13", optional = true, default-features = false }

# Tower integration
tower-service = { version = "0.3", optional = true }
tower-layer = { version = "0.3", optional = true }

# WASM/browser
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "Window", "ReadableStream", "ReadableStreamDefaultReader",
    "AbortController", "AbortSignal",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
http = "1"
smol = "2"
async-io = "2"
futures-io = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
flate2 = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
isahc = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }

[[bench]]
name = "comparison"
harness = false
