[package]
name = "aioduct-aria"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Aria2-inspired parallel download CLI built on aioduct"
publish = false

[[bin]]
name = "aioduct-aria"
path = "src/main.rs"

[dependencies]
aioduct = { workspace = true, features = [
    "tokio",
    "rustls",
    "rustls-ring",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "json",
] }
clap.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "signal"] }
indicatif.workspace = true
http.workspace = true
tracing-subscriber.workspace = true
