[package]
name = "aioduct-curl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Curl-inspired HTTP CLI built on aioduct"
publish = false

[[bin]]
name = "aioduct-curl"
path = "src/main.rs"

[dependencies]
aioduct = { workspace = true, features = [
    "tokio",
    "rustls",
    "rustls-ring",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "json",
] }
clap.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http.workspace = true
