[package]
name = "aioduct"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Async-native HTTP client built directly on hyper 1.x — no hyper-util, no legacy"
readme = "../../README.md"
keywords = ["http", "client", "async", "hyper", "rustls"]
categories = ["network-programming", "web-programming::http-client"]
exclude = ["doc/", "tests/", "target/"]

[features]
default = []
json = ["dep:serde", "dep:serde_json", "dep:serde_urlencoded"]
charset = ["dep:encoding_rs", "dep:mime"]
rustls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
rustls-native-roots = ["rustls", "dep:rustls-native-certs"]
# Note: hickory-dns implies tokio (hickory-resolver requires tokio)
hickory-dns = ["dep:hickory-resolver", "tokio"]
blocking = ["tokio"]
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:async-io", "dep:futures-io"]
compio = ["dep:compio-runtime", "dep:compio-driver", "dep:async-io", "dep:futures-io"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:futures-util", "rustls"]
gzip = ["dep:flate2"]
brotli = ["dep:brotli"]
zstd = ["dep:zstd"]
deflate = ["dep:flate2"]
tower = ["dep:tower-service", "dep:tower-layer"]
tracing = ["dep:tracing"]
otel = ["dep:opentelemetry", "dep:opentelemetry-http"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]

[dependencies]
# Core — always required
hyper.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
thiserror.workspace = true
base64.workspace = true
percent-encoding.workspace = true
url.workspace = true
socket2.workspace = true
futures-core.workspace = true

# JSON
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }

# Charset decoding
encoding_rs = { workspace = true, optional = true }
mime = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

# DNS
hickory-resolver = { workspace = true, optional = true }

# Runtime: tokio
tokio = { workspace = true, optional = true }

# Runtime: smol
smol = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
futures-io = { workspace = true, optional = true }

# Runtime: compio
compio-runtime = { workspace = true, optional = true }
compio-driver = { workspace = true, optional = true }

# HTTP/3
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Decompression
flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Tower integration
tower-service = { workspace = true, optional = true }
tower-layer = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true, optional = true }

# OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

# WASM/browser
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "Window", "ReadableStream", "ReadableStreamDefaultReader",
    "AbortController", "AbortSignal",
] }

[dev-dependencies]
async-io.workspace = true
flate2.workspace = true
futures-io.workspace = true
futures-util.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
