[package]
name = "example-otel-spans"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
aioduct = { path = "../../crates/aioduct", features = ["tokio", "otel", "rustls"] }
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
