[package]
name = "example-otel-spans"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
aioduct = { workspace = true, features = ["tokio", "otel", "rustls", "rustls-ring"] }
tokio = { version = "1", features = ["full"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
