[package]
name = "example-tracing-logs"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
aioduct = { path = "../../crates/aioduct", features = ["tokio", "tracing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
